k8s/sub.yml
apiVersion: v1                    
kind: Namespace
metadata:
  name: fastapi                             
---
apiVersion: v1
kind: Namespace
metadata:
  name: ggithubcom-laurobmb-fastap-ns
